test/neg/NonLinear.hs.msmt_
; Sorts
(declare-sort GHC.Num.Num 1)
(declare-sort GHC.Types.Ordering 0)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints
(wf $k_##38 ((lq_karg$GHC.Types.EQ##6U##k_##38 GHC.Types.Ordering)(lq_karg$GHC.Types.GT##6W##k_##38 GHC.Types.Ordering)(lq_karg$GHC.Types.LT##6S##k_##38 GHC.Types.Ordering)(lq_karg$VV##37##k_##38 Int)(lq_karg$pig##amI##k_##38 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)(alice##alI Int)(lq_tmp$x##71 Int)(bob##alJ Int)(lq_tmp$x##65 Int)(zonk##alH Int)(zonk##1 Int)(zink##alG Int)(zink##0 Int)(_GHC.Types.GT##6W GHC.Types.Ordering)(_VV##30 GHC.Types.Ordering)(_GHC.Types.LT##6S GHC.Types.Ordering)(_VV##29 GHC.Types.Ordering)(_GHC.Types.EQ##6U GHC.Types.Ordering)(_VV##28 GHC.Types.Ordering)) (=> (and (= _VV##28 _GHC.Types.EQ##6U) (and (= _VV##29 _GHC.Types.LT##6S) (and (= _VV##30 _GHC.Types.GT##6W) (and (= zink##0 5) (and (= zonk##1 67) (and ($k_##38 _GHC.Types.EQ##6U _GHC.Types.GT##6W _GHC.Types.LT##6S lq_tmp$x##65 zonk##alH) (and ($k_##38 _GHC.Types.EQ##6U _GHC.Types.GT##6W _GHC.Types.LT##6S lq_tmp$x##71 zink##alG) (= _VV##1 (+ alice##alI bob##alJ))))))))) (= _VV##1 0))))
(constraint (forall ((_VV##4 Int)(lq_anf$##dvQ Int)(lq_tmp$x##41 Int)(pig##amI Int)(_GHC.Types.GT##6W GHC.Types.Ordering)(_VV##30 GHC.Types.Ordering)(_GHC.Types.LT##6S GHC.Types.Ordering)(_VV##29 GHC.Types.Ordering)(_GHC.Types.EQ##6U GHC.Types.Ordering)(_VV##28 GHC.Types.Ordering)) (=> (and (= _VV##28 _GHC.Types.EQ##6U) (and (= _VV##29 _GHC.Types.LT##6S) (and (= _VV##30 _GHC.Types.GT##6W) (and (= lq_tmp$x##41 1) (= _VV##4 (+ pig##amI lq_anf$##dvQ)))))) ($k_##38 _GHC.Types.EQ##6U _GHC.Types.GT##6W _GHC.Types.LT##6S _VV##4 pig##amI))))

